fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -51,12 +51,14 @@
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
                         <option value='agricolus'>Agricolus</option>
-                        <option value='ai-crafters'>AI Crafters</option>
                         <option value='al-akhawayn-university-of-ifrane'>Al Akhawayn University of Ifrane</option>
                         <option value='artech-international-bv'>Artech International Bv</option>
-                        <option value='associação-porto-digital'>Associação Porto Digital</option>
+                        <option value='aws'>AWS</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
+                        <option value='dgssi'>DGSSI</option>
+                        <option value='dial-technologies'>Dial Technologies</option>
                         <option value='dksr'>DKSR</option>
+                        <option value='efe-maroc'>EFE Maroc</option>
                         <option value='engineering'>Engineering</option>
                         <option value='eurecat'>Eurecat</option>
                         <option value='fh-kiel'>FH Kiel</option>
@@ -64,27 +66,32 @@
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='fiware-technical-steering-committee'>FIWARE Technical Steering Committee</option>
                         <option value='futurecraft-foundation'>FutureCraft Foundation</option>
+                        <option value='giz'>GIZ</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='grupotx'>GrupoTX</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
+                        <option value='majal-berkane'>Majal Berkane</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='mohammed-v-university-rabat'>Mohammed V University Rabat</option>
-                        <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
                         <option value='parthenope-university-of-naples'>Parthenope University of Naples</option>
+                        <option value='porto-digital'>Porto Digital</option>
+                        <option value='prisalya-consulting'>PRISALYA Consulting</option>
                         <option value='prometheus-x'>Prometheus-x</option>
-                        <option value='rise-research-institutes-of-sweden'>RISE Research Institutes of Sweden</option>
+                        <option value='rabat-salé-kénitra-regional-council'>Rabat-Salé-Kénitra Regional Council</option>
+                        <option value='rise'>RISE</option>
                         <option value='secmotic'>Secmotic</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
+                        <option value='um6p'>UM6P</option>
                         <option value='university-of-naples-parthenope'>University of Naples Parthenope</option>
-                        <option value='university-of-padova--italy-'>University of Padova (Italy)</option>
+                        <option value='university-of-padova'>University of Padova</option>
                         <option value='upm'>UPM</option>
                         <option value='urban-service-provider'>Urban Service Provider</option>
             </select>
@@ -101,7 +108,7 @@
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='ciso'>CISO</option>
-                        <option value='co-founder'>Co-Founder</option>
+                        <option value='co-founder'>Co-founder</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
                         <option value='cto'>CTO</option>
@@ -113,7 +120,9 @@
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
+                        <option value='managing-director'>Managing Director</option>
                         <option value='managing-partner'>Managing Partner</option>
+                        <option value='minister'>Minister</option>
                         <option value='ministry-delegate'>Ministry Delegate</option>
                         <option value='owner'>Owner</option>
                         <option value='president'>President</option>
