fgs25 agenda updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -482,7 +482,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030&details=Sustainable Smart CityThis session explores how AI and data technologies can elevate urban management in preparation for the FIFA World Cup 2030.++Speakers:+Jure Lampe,Jin Kawasaki,Davor Meersman,Zouhair Lakhdissi,João Bastos,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T152000/20250522T163000">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030&details=Sustainable Smart CityThis session explores how AI and data technologies can elevate urban management in preparation for the FIFA World Cup 2030.++Speakers:+João Bastos,Jin Kawasaki,Jure Lampe,Zouheir Lakhdissi,Davor Meersman,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T152000/20250522T163000">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a>
              - Sustainable Smart City
 			<div class="date-time">
 	            <span class="separator-dot"></span>
