--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -124,7 +124,7 @@
           <option value='sveva-ianese'>Sveva Ianese</option>
           <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='yassine-laghzioui'>Yassine Laghzioui</option>
-          <option value='zouhair-lakhdissi'>Zouhair Lakhdissi</option>
+          <option value='zouheir-lakhdissi'>Zouheir Lakhdissi</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='davor-meersman'>Davor Meersman</option>
