fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -90,6 +90,7 @@
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
                         <option value='um6p'>UM6P</option>
+                        <option value='undp-morocco-accelerator-lab'>UNDP Morocco Accelerator Lab</option>
                         <option value='university-of-naples-parthenope'>University of Naples Parthenope</option>
                         <option value='university-of-padova'>University of Padova</option>
                         <option value='upm'>UPM</option>
