fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -107,6 +107,7 @@
                         <option value='cbo'>CBO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
+                        <option value='chief'>Chief</option>
                         <option value='ciso'>CISO</option>
                         <option value='co-founder'>Co-founder</option>
                         <option value='coo'>COO</option>
