--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-2" class="grid-item um6p   director ">
+        <div id="item-2" class="grid-item um6p   director chief ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='2'>
                 <div class='city-photo-container'>
@@ -62,7 +62,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='2'>Khalid Baddou</h6>
-                    <h4 class='position cat-bio' data-modal='2'>Chief of Staff &amp; Institutional Affairs Director</h4>
+                    <h4 class='position cat-bio' data-modal='2'>Chief of Cabinet &amp; Institutional Affairs Director</h4>
                     <h5 class='company-link'><a target='_blank' href='https://um6p.ma/en' rel='noopener'>UM6P</a></h5>
                 </div>
                 <div class='icons'>
