fgs25 agenda content and images updates

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -92,8 +92,8 @@
     <select name="" id="filterSpeaker">
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
-          <option value='omar-agodim'>Omar Agodim</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
+          <option value='khalid-baddou'>Khalid Baddou</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
@@ -110,8 +110,6 @@
           <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
-          <option value='hicham-el-habti'>Hicham El Habti</option>
-          <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
           <option value='jason-fox'>Jason Fox</option>
@@ -133,7 +131,7 @@
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='andrea-montieri'>Andrea Montieri</option>
-          <option value='timo-mueller'>Timo Mueller</option>
+          <option value='timo-müller'>Timo Müller</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
