--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -65,8 +65,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/amal-el-fellah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Amal El Fellah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/khalid-baddou--director-of-institutional-affairs-and-chairman-s-chief-of-cabinet.html">Khalid Baddou, Director of Institutional Affairs and Chairman’s Chief of Cabinet</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/representative-of-the-minister-of-digital-transition-and-administrative-reform.html">Representative of the Minister of Digital Transition and Administrative Reform</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/general-directorate-of-territorial-collectivities--ministry-of-interior-in-morocco.html">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--chairman-of-the-smart-cities-morocco-alliance.html">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
