Add Stefano De Panfilis

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -3200,8 +3200,8 @@
   </div>
 
 
-<div class='grid-item research---development international-academic-cooperation-for-digital-transformation michael-prange mohamed-dafir mohamed-essaidi javier-conde-díaz az-eddine-bennani luigi-romano 23-may'>
-    <div class="gridElementTextContainer">
+<div class='grid-item research---development international-academic-cooperation-for-digital-transformation stefano-de-panfilis michael-prange mohamed-dafir mohamed-essaidi javier-conde-díaz az-eddine-bennani luigi-romano 23-may'>
+    <div class="gridElementTextContainer moderated">
       <a href="./program?id=international-academic-cooperation-for-digital-transformation">
         <div class="chip-track">
           <div class="track light-blue">Research &amp; Development</div>
@@ -3226,7 +3226,7 @@
         <img src="https://www.fiware.org/fiware-summit/assets/icons/icon-rd.svg" loading="lazy" alt=""/>
       </div>
     </div>
-    <div class="foot">
+    <div class="foot moderated">
       <a class="btn-primary" href="./program?id=international-academic-cooperation-for-digital-transformation">
         <span class="material-symbols-outlined">info</span>
           Session details
