--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -109,6 +109,7 @@
           <option value='andrea-cruciani'>Andrea Cruciani</option>
           <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
+          <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
