--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -990,7 +990,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=International Academic Cooperation for Digital Transformation&details=Research &amp; DevelopmentThis session brings together leading professors and researchers from Morocco and Europe to explore avenues for sustained academic collaboration in the field of digital innovation.++Speakers:+Michael Prange,Mohamed Dafir,Mohamed Essaidi,Javier Conde Díaz,Az-Eddine Bennani,Luigi Romano,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T150000/20250523T160000">International Academic Cooperation for Digital Transformation</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=International Academic Cooperation for Digital Transformation&details=Research &amp; DevelopmentThis session brings together leading professors and researchers from Morocco and Europe to explore avenues for sustained academic collaboration in the field of digital innovation.++Speakers:+Stefano De Panfilis,Michael Prange,Mohamed Dafir,Mohamed Essaidi,Javier Conde Díaz,Az-Eddine Bennani,Luigi Romano,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T150000/20250523T160000">International Academic Cooperation for Digital Transformation</a>
              - Research &amp; Development
 			<div class="date-time">
 	            <span class="separator-dot"></span>
