--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -101,6 +101,7 @@
             <label for='filterRole' class='dropdown-label'>Role</label>
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
+                        <option value='advisor'>Advisor</option>
                         <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
                         <option value='business-developer'>Business Developer</option>
