--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -3200,7 +3200,7 @@
   </div>
 
 
-<div class='grid-item research---development international-academic-cooperation-for-digital-transformation stefano-de-panfilis michael-prange mohamed-dafir mohamed-essaidi javier-conde-díaz az-eddine-bennani luigi-romano 23-may'>
+<div class='grid-item research---development international-academic-cooperation-for-digital-transformation stefano-de-panfilis michael-prange mohamed-dafir mohamed-essaidi luigi-romano az-eddine-bennani javier-conde-díaz 23-may'>
     <div class="gridElementTextContainer moderated">
       <a href="./program?id=international-academic-cooperation-for-digital-transformation">
         <div class="chip-track">
