updating Andrea TeamDev

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -50,7 +50,6 @@
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
-                        <option value='agricolus'>Agricolus</option>
                         <option value='al-akhawayn-university-of-ifrane'>Al Akhawayn University of Ifrane</option>
                         <option value='artech-international-bv'>Artech International Bv</option>
                         <option value='aws'>AWS</option>
@@ -87,6 +86,7 @@
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
+                        <option value='teamdev-ecosystem--agricolus'>TeamDev Ecosystem, Agricolus</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
                         <option value='um6p'>UM6P</option>
@@ -108,7 +108,6 @@
                         <option value='cbo'>CBO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
-                        <option value='chief'>Chief</option>
                         <option value='ciso'>CISO</option>
                         <option value='co-founder'>Co-founder</option>
                         <option value='coo'>COO</option>
