update agenda, andrea teamdev

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -93,8 +93,8 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
-          <option value='khalid-baddou'>Khalid Baddou</option>
           <option value='joão-bastos'>João Bastos</option>
+          <option value='ali-benfattoum'>Ali Benfattoum</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
@@ -111,6 +111,7 @@
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
+          <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
           <option value='jason-fox'>Jason Fox</option>
@@ -129,6 +130,7 @@
           <option value='davor-meersman'>Davor Meersman</option>
           <option value='el-mehdi-erroussafi'>El Mehdi Erroussafi</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
+          <option value='ryad-mezzour'>Ryad Mezzour</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='andrea-montieri'>Andrea Montieri</option>
