Add shuttle bus

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -76,6 +76,7 @@
           <option value='robotics---iot-agents'>Robotics &amp; IoT Agents</option>
           <option value='sdg-driven-solutions-for-a-sustainable-world-cup-legacy'>SDG-Driven Solutions for a Sustainable World Cup Legacy</option>
           <option value='secure-smart-city'>Secure Smart City</option>
+          <option value='shuttle-bus'>Shuttle Bus</option>
           <option value='smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust'>Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</option>
           <option value='trusted-data-for-circular-futures'>Trusted Data for Circular Futures</option>
     </select>
@@ -93,7 +94,11 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
+          <option value='fatima-azmarkou'>Fatima Azmarkou</option>
+          <option value='fatima-azmarkou'>Fatima Azmarkou</option>
           <option value='joão-bastos'>João Bastos</option>
+          <option value='mohamed-benabbad'>Mohamed Benabbad</option>
+          <option value='mohamed-benabbad'>Mohamed Benabbad</option>
           <option value='ali-benfattoum'>Ali Benfattoum</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
@@ -111,7 +116,9 @@
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
+          <option value='redouan-dinar'>Redouan Dinar</option>
           <option value='hicham-el-habti'>Hicham El Habti</option>
+          <option value='mohammed-essaidi'>Mohammed Essaidi</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
           <option value='jason-fox'>Jason Fox</option>
