--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -62,6 +62,7 @@ li {
 </head>
 <body>
 	<ul>
+		<li><a href="https://www.fiware.org/fgs-2025/rabat-city-to-um6p-technopolis--day-one.html">Rabat City to UM6P Technopolis, Day One</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
@@ -104,7 +105,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ai---data-driven-cities-for-the-fifa-world-cup-2030.html">AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
@@ -112,6 +113,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants--leveraging-global-support-for-urban-development.html">National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
@@ -126,6 +128,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enershare---the-energy-data-space-to-facilitate-sustainable-renewable-consumer-centric-transition.html">ENERSHARE - The Energy Data Space to Facilitate Sustainable Renewable Consumer Centric Transition</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/um6p-technopolis-campus-to-rabat-city--day-one.html">UM6P Technopolis Campus to Rabat City, Day One</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/rabat-city-to-um6p-technopolis---day-two.html">Rabat City to UM6P Technopolis , Day Two</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
@@ -136,6 +140,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/overview-of-fiware-data-space-components.html">Overview of FIWARE Data Space Components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/cyber-security-digital-twins-for-securing-smart-cities.html">Cyber-security Digital Twins for Securing Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/cybersecurity-context-in-morocco-and-challenges.html">Cybersecurity Context in Morocco and Challenges</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience-.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience.</a></li>
@@ -147,8 +152,10 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-territory-to-technology--the-digital-transformation-of-berkane-province.html">From Territory to Technology: The Digital Transformation of Berkane Province</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-wings-for-the-white-dove--tétouan-s-urban-innovation-experience.html">Smart Wings for the White Dove: Tétouan’s Urban Innovation Experience</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ifrane--morocco-s-alpine-smart-haven---blending-nature--youth-expertise--clean-tech--and-sustainable-tourism.html">Ifrane: Morocco’s Alpine Smart Haven – Blending Nature, Youth Expertise, Clean Tech, and Sustainable Tourism</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/the-digital-pulse-of-marrakech--smart-solutions-for-a-historic-red-city.html">The Digital Pulse of Marrakech: Smart Solutions for a Historic Red City</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/prayer-time.html">Prayer Time</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/international-academic-cooperation-for-digital-transformation.html">International Academic Cooperation for Digital Transformation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opportunities-from-each-panelists.html">Opportunities From Each Panelists</a></li>
@@ -156,8 +163,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/panel-open-discussion.html">Panel Open Discussion</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-components.html">Extended FIWARE Catalog Components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/um6p-technopolis-campus-to-rabat-city--day-two.html">UM6P Technopolis Campus to Rabat City, Day Two</a></li>
 	</ul>
 </body>
 </html>
