fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -50,8 +50,9 @@
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
-                        <option value='al-akhawayn-university-of-ifrane'>Al Akhawayn University of Ifrane</option>
-                        <option value='artech-international-bv'>Artech International Bv</option>
+                        <option value='al-akhawayn-university'>Al Akhawayn University</option>
+                        <option value='artech-international'>Artech International</option>
+                        <option value='ausim'>AUSIM</option>
                         <option value='aws'>AWS</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
                         <option value='dgssi'>DGSSI</option>
@@ -73,7 +74,6 @@
                         <option value='majal-berkane'>Majal Berkane</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
-                        <option value='mohammed-v-university-rabat'>Mohammed V University Rabat</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
                         <option value='parthenope-university-of-naples'>Parthenope University of Naples</option>
@@ -89,6 +89,7 @@
                         <option value='teamdev-ecosystem--agricolus'>TeamDev Ecosystem, Agricolus</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
+                        <option value='um5'>UM5</option>
                         <option value='um6p'>UM6P</option>
                         <option value='university-of-naples-parthenope'>University of Naples Parthenope</option>
                         <option value='university-of-padova'>University of Padova</option>
@@ -118,6 +119,7 @@
                         <option value='executive-chairman'>Executive Chairman</option>
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
+                        <option value='general-secretary'>General Secretary</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
