--- a/directories/fiware-summit/locations/index.html
+++ b/directories/fiware-summit/locations/index.html
@@ -86,6 +86,9 @@
                                  <li>
                                     <img height="24px" width="24px" src="./icons/train.svg"> Station
                                 </li>
+                                 <li>
+                                    <img height="24px" width="24px" src="./icons/shuttle.svg"> Shuttle Bus
+                                </li>
                         </nav>
                     </div>
                 </div>
