update Andrea TeamDev

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -54,6 +54,7 @@
                         <option value='artech-international'>Artech International</option>
                         <option value='ausim'>AUSIM</option>
                         <option value='aws'>AWS</option>
+                        <option value='city-of-marrakech'>City of Marrakech</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
                         <option value='dgssi'>DGSSI</option>
                         <option value='dial-technologies'>Dial Technologies</option>
@@ -72,6 +73,7 @@
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='majal-berkane'>Majal Berkane</option>
+                        <option value='maroc-numeric-cluster'>Maroc Numeric Cluster</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='nec-corporation'>NEC Corporation</option>
@@ -81,12 +83,13 @@
                         <option value='prisalya-consulting'>PRISALYA Consulting</option>
                         <option value='prometheus-x'>Prometheus-x</option>
                         <option value='rabat-salé-kénitra-regional-council'>Rabat-Salé-Kénitra Regional Council</option>
+                        <option value='rhamna-provincial-council'>Rhamna Provincial Council</option>
                         <option value='rise'>RISE</option>
                         <option value='secmotic'>Secmotic</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
-                        <option value='teamdev-ecosystem--agricolus'>TeamDev Ecosystem, Agricolus</option>
+                        <option value='teamdev-ecosystem'>TeamDev Ecosystem</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
                         <option value='um5'>UM5</option>
@@ -132,6 +135,7 @@
                         <option value='professor'>Professor</option>
                         <option value='program-manager'>Program Manager</option>
                         <option value='researcher'>Researcher</option>
+                        <option value='senior-manager'>Senior Manager</option>
                         <option value='software-engineer'>Software Engineer</option>
                         <option value='technical-expert'>Technical Expert</option>
                         <option value='technical-manager'>Technical Manager</option>
