app locations fixes

--- a/directories/fiware-summit/locations/index.html
+++ b/directories/fiware-summit/locations/index.html
@@ -47,6 +47,7 @@
         <link rel="preload" as="image" href="./icons/train.svg" />
         <link rel="preload" as="image" href="./icons/airport.svg" />
         <link rel="preload" as="image" href="./icons/hotel.svg" />
+        <link rel="preload" as="image" href="./icons/shuttle.svg" />
         
         
         <style>
